--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pokémon Game</title>
+  <title>Pokemon Game</title>
   <style>
     .grid {
       display: grid;
